<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/MyButtonLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/my_button_bg">

    <LinearLayout
        android:id="@+id/valorLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="6dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/SensorInstValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="1dp"
            android:text="@string/button_default_value"
            android:textColor="@color/black"
            android:textSize="34sp" />

        <TextView
            android:id="@+id/ValuePercentage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:layout_marginTop="6dp"
            android:text="%"
            android:textSize="32sp"
            android:visibility="gone"
            android:textColor="@color/black" />
    </LinearLayout>

    <TextView
        android:id="@+id/PulsaInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="12dp"
        android:text="@string/button_more_info_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/SensorName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="6dp"
        android:layout_marginBottom="6dp"
        android:text="@string/button_default_name"
        app:layout_constraintBottom_toTopOf="@id/PulsaInfo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/valorLayout"
        tools:ignore="HardcodedText"
        android:textColor="@color/black"/>


</androidx.constraintlayout.widget.ConstraintLayout>